[package]
name = "microblink"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = { version = "0.7.5" }
panic-halt = { version = "1.0.0" }
rtt-target = { version = "0.6.1" }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
nrf52833-pac = { version = "0.12.2" }
nrf52833-hal = { version = "0.18.0" }
embedded-hal = { version = "1.0.0" }
microbit-v2 = { version = "0.15.1" }
